# MultiFlexer

./: .gitignore  README.md
MultiPy/: requirements.txt
MultiPy/receiver/: cell.py  config.py  glib_qt_integration.py  gst_utils.py  gstreamer-1.0-plugins-1.26.5-universal.pkg  landing_manager.py  main.py  mqtt_manager.py  peer_receiver.py  receiver_manager.py  ui_components.py  view_mode_manager.py
MultiPy/sender/: mosquitto  mosquitto.conf  server.py
MultiPy/sender/static/css/: administrator.css  enter.css  index.css
MultiPy/sender/static/js/: administrator.js  index.js  mqttClient.js  sender.js  voiceHandler.js
MultiPy/sender/static/js/admin/: bootstrap.js  mic_control.js  state_manager.js  stats_dashboard.js  ui_manager.js
MultiPy/sender/templates/: administrator.html  enter.html  index.html
MultiPy/server/: index.py  package.json
gst-shark/: configure.ac  meson.build
gst-shark/plugins/tracers/: gstinterlatency.c  gstperiodictracer.c  gstperiodictracer.h  gstproctime.c  gstqueuelevel.c  gstscheduletime.c  gstsharktracer.c  gstsharktracer.h  meson.build
gst-shark/scripts/graphics/: gstshark-plot  gstshark-plot.m
